Add SourceGCPProject interface to obtain data owner and availability class
